fixed homepage font sizes on smaller screens

--- a/client/src/Main.css
+++ b/client/src/Main.css
@@ -143,7 +143,10 @@ body {
   }
   .welcome {
     text-align: center;
-    font-size: 50px !important;
+    font-size: 55px !important;
+  }
+  .desc {
+    font-size: 16px;
   }
 }
 
